--- a/examples/index.css
+++ b/examples/index.css
@@ -8,6 +8,14 @@
     float: left;
     text-align: center;
 }
+.left-content {
+    width: 100%;
+    height: 300px;
+}
+.connecting {
+    color: #999;
+    margin: 50px 0;
+}
 .recognizing {
     color: #999;
     margin: 0 10px;
@@ -36,6 +44,7 @@
     text-align: left;
     padding: 10px;
     box-sizing: border-box;
+    overflow: scroll;
 }
 .display-none {
     display: none;
